nginx/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-simple-pod
  labels:
    app: simple
spec:
  containers:
  - name: simple-container
    image: nginx:latest
    ports:
    - containerPort: 80

  tolerations:
  - key: "prod"
    operator: "Equal"
    value: "true"
    effect: "NoSchedule"
